--- a/migration_to_TypeScript/src/index.html
+++ b/migration_to_TypeScript/src/index.html
@@ -48,7 +48,7 @@
         </div>
     </template>
 
-    <script src="./index.ts"></script>
+    <script src="./index.js"></script>
 </body>
 
 </html>
