--- a/migration_to_TypeScript/src/index.html
+++ b/migration_to_TypeScript/src/index.html
@@ -14,7 +14,6 @@
     </header>
     <main>
         <div class="sources buttons">
-
         </div>
         <div class="news"></div>
     </main>
@@ -22,6 +21,13 @@
         <p class="copyright">
             Copyright <a href="https://newsapi.org">NewsAPI</a>
         </p>
+        <p class="logo_rs">
+            <a href="https://rs.school/">
+                <img src="https://rs.school/images/rs_school_js.svg" alt="logo Rs school">
+            </a>
+        </p>
+
+
     </footer>
 
     <template id="sourceItemTemp">
