fix: changing html classes and adjusting css

--- a/migration_to_TypeScript/src/index.html
+++ b/migration_to_TypeScript/src/index.html
@@ -14,7 +14,6 @@
             <div class="sources"></div>
             <span class="source__item-name"></span>
         </div>
-        <div class="news"></div>
     </header>
     <main id="newsItemTemp">
         <div class="news__item">
@@ -29,9 +28,7 @@
                 <h2 class="news__description-title"></h2>
                 <h3 class="news__description-source"></h3>
                 <p class="news__description-content"></p>
-                <p class="news__read-more">
-                    <a href="#">Read More</a>
-                </p>
+                <p class="news__read-more"><a href="#">Read More</a></p>
             </div>
         </div>
     </main>
